# macrowars

./: Asteroid.cpp  Asteroid.h  Body.cpp  Body.h  CMakeLists.txt  Core.cpp  Core.h  GuiSystem.cpp  GuiSystem.h  Macro.cpp  Macro.h  Movable.cpp  Movable.h  MoveStrategy.h  OrbitStrategy.h  Orbitable.cpp  Orbitable.h  OriginAndDestination.cpp  OriginAndDestination.h  Planet.cpp  Planet.h  Player.cpp  Player.h  README  Satellite.cpp  Satellite.h  Ship.cpp  Ship.h  TravelStrategy.cpp  TravelStrategy.h  Traveller.cpp  Traveller.h  Waypoint.cpp  Waypoint.h  main.cpp
src/: CMakeLists.txt  app_state.hpp  app_state_manager.cpp  app_state_manager.hpp  asteroid.cpp  asteroid.hpp  body.cpp  body.hpp  core.cpp  core.hpp  dot_scene_loader.cpp  dot_scene_loader.hpp  font_texture_helper.hpp  game_state.cpp  game_state.hpp  gui_system.cpp  gui_system.hpp  log.hpp  macro.cpp  macrowars.cpp  macrowars.hpp  main.cpp  main2.cpp  menu_state.cpp  menu_state.hpp  movable.cpp  movable.hpp  move_strategy.hpp  ogre_framework.cpp  ogre_framework.hpp  orbit_strategy.hpp  orbitable.cpp  orbitable.hpp  origin_and_destination.cpp  origin_and_destination.hpp  pause_state.cpp  pause_state.hpp  planet.cpp  planet.hpp  player.cpp  (+12 more)
